# api_lorem_ipsum

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STANDARDS.md  GIT_HOOKS.md  README.md  RELEASE_AUTOMATION.md  SECURITY.md  TESTING_COMMANDS.md  TESTING_STRATEGY.md  TESTS_STRUCTURE.md  prepare_release.sh  setup_structure.sh  test_release_process.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  pr-validation.yml  release.yml
config/: development.toml
docs/: RELEASE_PROCESS.md
scripts/: install-hooks.sh  pre-commit.sh  uninstall-hooks.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: mod.rs
src/application/ports/: mod.rs
src/application/use_cases/: mod.rs
src/domain/: mod.rs
src/domain/entities/: generation_request.rs  mod.rs
src/domain/errors/: domain_errors.rs  mod.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: generation_unit.rs  html_tags.rs  mod.rs  text_format.rs  text_length.rs  text_length_category.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/web/handlers/: mod.rs
src/infrastructure/web/middleware/: mod.rs
src/infrastructure/web/routes/: mod.rs
src/shared/errors/: mod.rs
tests/: domain_error_integration.rs  integration.rs  performance.rs  unit_tests.rs
tests/unit/: mod.rs
tests/unit/domain/: mod.rs
tests/unit/domain/entities/: mod.rs  test_generation_request.rs
tests/unit/domain/errors/: mod.rs  test_domain_errors.rs
tests/unit/domain/value_objects/: mod.rs  test_generation_unit.rs  test_html_tags.rs  test_text_format_unit.rs  test_text_length.rs  test_text_length_category.rs
