[package]
name = "api_lorem_ipsum"
version = "0.1.0"
edition = "2021"
authors = ["Pierre <pierre.bertrnd@example.com>"]
description = "API Lorem Ipsum en Rust suivant les principes DDD"
license = "MIT"
repository = "https://github.com/Pierre-brtrd/api_lorem_ipsum"

[dependencies]
# Web Framework
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation et Erreurs
validator = { version = "0.20", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"

# Configuration et Logging
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilitaires
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9"
once_cell = "1.19"

[dev-dependencies]
mockall = "0.13"
rstest = "0.26"
tokio-test = "0.4"
fastrand = "2.0"
criterion = "0.5"
